Add event search with filters

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   profiles:
     active: dev
+  jackson:
+    date-format: dd-MM-yyyy
+    time-zone: Europe/Warsaw
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: root
