--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13",
+    "styled-normalize": "^8.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -23,8 +25,8 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.9.0",
     "vite": "^5.4.8"
   }
 }
