--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intl": "^6.8.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
