--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,6 +18,6 @@ spring:
     username: root
     password: pass
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
