--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   postgresqldb:
     image: postgres
@@ -34,10 +33,10 @@ services:
       dockerfile: Dockerfile
     container_name: react_frontend
     ports:
-      - "4173:4173"
+      - "3000:3000"
     depends_on:
       - backend
-    command: yarn preview --host --no-open
+    command: yarn preview --host --port 3000 --no-open
 
 volumes:
   postgres_data:
